--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
+  "name": "shoe-shop-backend",
+  "version": "1.0.0",
+  "description": "shoe shop of pham van hau",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/longsoisuaxe1a/shoe-shop-backend.git"
+  },
+  "keywords": [
+    "nodejs",
+    "expressjs"
+  ],
+  "author": "pham van hau",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/longsoisuaxe1a/shoe-shop-backend/issues"
+  },
+  "homepage": "https://github.com/longsoisuaxe1a/shoe-shop-backend#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nodemon": "^3.1.1"
   }
 }
