--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "shoe shop of pham van hau",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +22,12 @@
   },
   "homepage": "https://github.com/longsoisuaxe1a/shoe-shop-backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
     "nodemon": "^3.1.1"
   }
 }
